tests/baselines/reference/mergeWithImportedNamespace.errors.txt
f2.ts(1,9): error TS2440: Import declaration conflicts with local declaration of 'N'.


==== f1.ts (0 errors) ====
    export namespace N { export var x = 1; }
    
==== f2.ts (1 errors) ====
    import {N} from "./f1";
            ~
!!! error TS2440: Import declaration conflicts with local declaration of 'N'.
    export namespace N {
        export interface I {x: any}
    }